# yuxupalace-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  frontend-ci.yml  sync-protobuf.yml
crates/raidian/: Cargo.toml  build.rs  generate.sh
crates/raidian/proto/: auth.proto  buffer.proto  collaboration.proto  collaborator.proto  dashboard.proto  envelope.proto  git.proto  issue.proto  lsp.proto  member.proto  merge_request.proto  peer.proto  pipeline.proto  project.proto  repository.proto  room.proto  session.proto  worktree.proto
crates/raidian/src/: generated.rs  generated_collab.rs  lib.rs
crates/yuxu-cli/: Cargo.toml
crates/yuxu-cli/src/: client.rs  config.rs  main.rs
crates/yuxu-cli/src/commands/: auth.rs  mod.rs  repo.rs
crates/yuxu-core/: Cargo.toml
crates/yuxu-core/src/: acl.rs  auth.rs  error.rs  git_ops.rs  lib.rs
crates/yuxu-core/src/auth/: jwt.rs  mod.rs  password.rs  provider.rs
crates/yuxu-core/src/crdt/: anchor.rs  buffer.rs  deferred.rs  fragment.rs  lamport.rs  mod.rs  proto_conv.rs  undo_map.rs
crates/yuxu-server/: Cargo.toml  Dockerfile
crates/yuxu-server/migrations/postgres/: 001_init.sql  002_add_github_id.sql  003_add_zixiao_cloud_id.sql
crates/yuxu-server/migrations/sqlite/: 001_init.sql
crates/yuxu-server/src/: app_state.rs  config.rs  error.rs  main.rs
crates/yuxu-server/src/collab/: envelope.rs  hub.rs  livekit.rs  mod.rs  project.rs  room.rs  ws.rs
crates/yuxu-server/src/db/: issues.rs  merge_requests.rs  mod.rs  repositories.rs  users.rs
crates/yuxu-server/src/middleware/: auth.rs
crates/yuxu-server/src/routes/: auth.rs  dashboard.rs  issues.rs  members.rs  merge_requests.rs  mod.rs  pipelines.rs  repos.rs
docs/deployment/: docker-hub-setup.md  self-hosted.md
frontend/: .dockerignore  .env.development  .gitignore  Dockerfile  index.html  nasti.config.ts  package.json
frontend/docker/: entrypoint.sh  nginx.conf.template
frontend/public/: app.css  heroui.min.css  manifest.json  sw.js  theme.css
frontend/src/: App.tsx  main.tsx  nasti-env.d.ts
frontend/src/components/: ComingSoon.tsx  Header.tsx  RepoCreateModal.tsx  RequireAuth.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  auth.ts  session-store.ts  types.ts
frontend/src/pages/: _404.tsx  _layout.tsx  index.tsx  login.tsx  register.tsx
frontend/src/pages/oauth/: callback.tsx
frontend/src/pages/repos/: [...fullName].tsx  index.tsx
frontend/src/pages/settings/: index.tsx
frontend/yuxu/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/yuxu/src/layouts/: MainLayout.tsx
frontend/yuxu/src/pages/: CIPipelines.tsx  Dashboard.tsx  Issues.tsx  Members.tsx  MergeRequests.tsx  RepositoryDetail.tsx  Settings.tsx
