[workspace]
resolver = "2"
members = [
    "crates/raidian",
    "crates/yuxu-core",
    "crates/yuxu-server",
    "crates/yuxu-cli",
]

[workspace.package]
edition = "2024"
version = "1.0.0"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
bytes = "1"

# Common utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"

# Protobuf
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"

# Web / HTTP
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
http = "1"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "uuid", "chrono", "macros", "migrate"] }
dashmap = "6"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dirs = "5"
toml = "0.8"

# Internal crates
raidian = { path = "crates/raidian" }
yuxu-core = { path = "crates/yuxu-core" }
