[package]
name = "yuxu-cli"
description = "CLI client for YuXu DevOps platform"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "yuxu"
path = "src/main.rs"

[dependencies]
raidian.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true

clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
dirs = "6"
colored = "3"
rpassword = "7"