[package]
name = "yuxu-cli"
description = "Command-line client for the YuXu backend."
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "yuxu"
path = "src/main.rs"

[dependencies]
raidian = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
