[package]
name = "yuxu-core"
description = "Shared business logic for YuXu DevOps platform"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
raidian.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

argon2 = "0.5"
jsonwebtoken = "9"
git2 = "0.20"
