[package]
name = "yuxu-server"
description = "YuXu DevOps platform backend server"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
raidian.workspace = true
yuxu-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true

axum = { version = "0.8", features = ["json", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
git2 = "0.20"
dashmap = "6"
yrs = "0.21"
futures = "0.3"
