[package]
name = "yuxu-server"
description = "Axum + SQLx backend for YuXu: REST APIs + Zed-style collaboration WebSocket."
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
raidian = { workspace = true }
yuxu-core = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
prost = { workspace = true }
sqlx = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }

[features]
default = ["sqlite"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
